[package]
name = "truenas_ros"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Idiomatic Rust bindings for modern Linux filesystem/mount syscalls, ACLs, and related utilities (the Rust equivalent of truenas_pyos)."
categories = ["os::unix-apis", "filesystem"]
keywords = ["linux", "syscall", "mount", "acl", "truenas"]

[dependencies]
libc = { version = "0.2.155", features = ["extra_traits"] }
bitflags = "2.6"

[features]
# Default enables the implemented subsystems; more join as phases land.
default = [
    "fs",
    "xattr",
    "mount",
    "acl",
    "fhandle",
    "fsiter",
    "namespace",
    "shutil",
    "configfile",
]

fs = []
xattr = []
mount = ["fs"]
fhandle = ["fs"]
acl = ["xattr"]
fsiter = ["fs", "mount"]
namespace = []
shutil = ["fsiter", "xattr"]
configfile = ["fs"]
# io_uring stream networking. `net-core` is the shared reactor engine + vocab;
# `net-server` (inbound) and `net-client` (outbound) are the roles, each pulling
# in the core. Kept out of `default` (io_uring-runtime-dependent, use-case-
# specific); opt in via a role feature or `full`.
net-core = []
net-server = ["net-core"]
net-client = ["net-core"]
# Internal: exposes the pure `frame_step` framing decision to the fuzz crate
# (`fuzz/`). Not for consumers; implies `net-server` (where `frame_step` lives).
__fuzz = ["net-server"]
full = [
    "fs",
    "xattr",
    "mount",
    "fhandle",
    "acl",
    "fsiter",
    "namespace",
    "shutil",
    "configfile",
    "net-server",
    "net-client",
]

[dev-dependencies]
tempfile = "3"
# socket_server splice test only: a raw `pipe()` as the splice target. `libc`
# is already the library's normal dependency, so this adds no new footprint.
libc = { version = "0.2.155", features = ["extra_traits"] }
# kTLS integration test only: a real TLS client/server around the kernel-TLS
# transport. The library itself pulls no TLS crate — the consumer brings one.
openssl = "0.10"
openssl-sys = "0.9"
foreign-types = "0.3" # ForeignType::as_ptr for the raw SSL_accept BIO dance

[[test]]
name = "test"
path = "test/test.rs"

[[test]]
name = "coverage"
path = "test/coverage.rs"

# Privileged, ZFS-backed tests (real NFSv4/POSIX ACLs, snapshot detection).
# Skip automatically when no ACL-typed ZFS dataset is available; provisioned in
# CI by .github/workflows/scripts/setup-test-zfs.sh.
[[test]]
name = "zfs"
path = "test/zfs.rs"

# Differential tests against the real Python `configparser` (byte-for-byte and
# behavior parity). Skip automatically when `python3` is unavailable.
[[test]]
name = "configparser_compat"
path = "test/configparser_compat.rs"

# io_uring stream server. Live loopback tests; skip automatically when io_uring
# is unavailable (sandbox/old kernel). Set TRUENAS_ROS_REQUIRE_IO_URING=1 to
# make that a hard failure instead.
[[test]]
name = "net_server"
path = "test/net_server.rs"

# io_uring stream client. Live loopback echo against an in-process net::server;
# skips automatically when io_uring is unavailable (sandbox/old kernel). Set
# TRUENAS_ROS_REQUIRE_IO_URING=1 to make that a hard failure instead.
[[test]]
name = "net_client"
path = "test/net_client.rs"

# Consumer-facing example: the socket_server handlers (esp. `accept`) as
# standalone functions. Built only when the `socket_server` feature is on.
[[example]]
name = "tcp_accept_fn"
required-features = ["net-server"]

# Consumer-facing example: offloading the body handler to a worker pool via
# `Response::Defer` (the library ships no pool). Feature-gated like above.
[[example]]
name = "tcp_offload"
required-features = ["net-server"]

# Consumer-facing example: multi-core via SO_REUSEPORT — N independent
# single-ring servers (one per thread) sharing one address.
[[example]]
name = "tcp_multicore"
required-features = ["net-server"]

# Consumer-facing example: detaching a connection's socket fd to a worker for a
# blocking op on the socket (e.g. a ZFS send/recv ioctl), then resume or close.
[[example]]
name = "tcp_detach"
required-features = ["net-server"]

# Consumer-facing example: the outbound `net::client` — fan out connections,
# batch framed requests, and pump `next_event` — against an in-process
# `net::server` echo (so it runs standalone). Needs both roles.
[[example]]
name = "tcp_client"
required-features = ["net-server", "net-client"]
